# OES2-BlueROV2-fusion

Arduino Codes/: Encoder_PID_V2.ino  OLDEncoderRotatoryCode.ino
additional_scripts/: input_generator.py
bluerov2_arduino/arduino_thruster/: arduino_thruster.ino
catkin_ws_src/bluerov2_bringup/: CMakeLists.txt  package.xml
catkin_ws_src/bluerov2_bringup/launch/: bluerov2_bringup.launch  bluerov2_bringup.launch.save  full_bluerov2_bringup.launch
catkin_ws_src/ekf/: CMakeLists.txt  package.xml
catkin_ws_src/ekf/launch/: start_ekf.launch
catkin_ws_src/ekf/scripts/: ekf.py
catkin_ws_src/uuvlab_dvl_waterlinked/: CMakeLists.txt  README.md  package.xml
catkin_ws_src/uuvlab_dvl_waterlinked/launch/: start_dvl.launch
catkin_ws_src/uuvlab_dvl_waterlinked/scripts/: datalogger.py  dvl_serial.py  dvl_tcp.py  test_gui.py
catkin_ws_src/uuvlab_ms5837/: CMakeLists.txt  package.xml
catkin_ws_src/uuvlab_ms5837/src/: ms5837_driver.py
catkin_ws_src/uuvlab_msgs/: CMakeLists.txt  README.md  package.xml
catkin_ws_src/uuvlab_msgs/msg/: EKF.msg  Imu.msg  ThrusterPWMs.msg
catkin_ws_src/uuvlab_sbl/: CMakeLists.txt  README.md  package.xml
catkin_ws_src/uuvlab_sbl/launch/: start_sbl.launch
catkin_ws_src/uuvlab_sbl/scripts/: uuvlab_sbl_node.py
catkin_ws_src/uuvlab_thruster/: CMakeLists.txt  README.md  package.xml  thruster_manager_generator.m
catkin_ws_src/uuvlab_tm200/: CMakeLists.txt  package.xml
catkin_ws_src/uuvlab_tsys01/: CMakeLists.txt  package.xml
new_files/: ekf.py  ekf_fusion.py  input_random.py  jacobian_calc.py  np_test.py
(+14 files in other folders)
