<?xml version="1.0"?>
<package format="2">
  <name>uuvlab_msgs</name>
  <version>1.0.0</version>
  <description>UUV Lab Messeages.</description>
  <maintainer email="ffso@uuvlab.com">Fredrik</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
  </export>
</package>
